...
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_marginBottom="20dp">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/imgFotoMascotaTop"
                            android:layout_width="110dp"
                            android:layout_height="110dp"
                            android:padding="2dp"
                            app:strokeColor="@color/colorIntermedio"
                            app:strokeWidth="2dp"
                            app:shapeAppearanceOverlay="@style/CircleImage"
...
                                app:errorEnabled="true"
                                app:endIconMode="custom"
                                app:endIconDrawable="@drawable/baseline_edit_24"
                                app:endIconTint="@color/moradoSubtitulo"
                                app:errorIconDrawable="@null">
                                <EditText
                                    android:id="@+id/txtNombreMascotaTop"
                                    android:layout_width="match_parent"
                                    android:layout_height="50dp"
                                    android:hint="Nombre"
                                    android:textColorHint="@color/hintText"
                                    android:background="@drawable/campos_circulares"
                                    android:paddingHorizontal="15dp"
...
                        android:paddingHorizontal="15dp"
                        android:text="--"
                        android:layout_marginBottom="12dp"
                        android:textColor="@android:color/black" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layoutTelefonoDueno"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:errorEnabled="true"
                        app:endIconMode="custom"
                        app:endIconDrawable="@drawable/baseline_edit_24"
                        app:endIconTint="@color/moradoSubtitulo">
                        <EditText
                            android:id="@+id/txtnumeroTelefonoDueno"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:hint="Contacto del dueño"
                            android:textColorHint="@color/hintText"
                            android:background="@drawable/campos_circulares"
                            android:paddingHorizontal="15dp"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:errorEnabled="true"
                        app:endIconTint="@color/moradoSubtitulo">
                        <AutoCompleteTextView
                            android:id="@+id/txtFechaNacimiento"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:hint="Fecha de nacimiento"
                            android:textColorHint="@color/hintText"
                            android:background="@drawable/campos_circulares"
                            android:paddingHorizontal="15dp"
...
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:hintEnabled="false"
                        app:errorEnabled="true"
                        app:endIconTint="@color/moradoSubtitulo">
                        <AutoCompleteTextView
                            android:id="@+id/txtFechaAdopcion"
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:hint="Fecha de adopción"
                            android:textColorHint="@color/hintText"
                            android:background="@drawable/campos_circulares"
                            android:paddingHorizontal="15dp"
...
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:id="@+id/btnAceptarMorado"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:padding="12dp"
                        android:clickable="true"
...
