...

            <TextView
                android:id="@+id/txtCurp"
                android:layout_width="match_parent"
                android:layout_height="55dp"
...
                app:endIconTint="@color/moradoSubtitulo">
                <EditText
                    android:id="@+id/txtNombre"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                app:endIconTint="@color/moradoSubtitulo">
                <EditText
                    android:id="@+id/txtTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutCalle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                app:endIconTint="@color/moradoSubtitulo">
                <EditText
                    android:id="@+id/txtCalle"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutCodigoPostal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                app:endIconTint="@color/moradoSubtitulo">
                <EditText
                    android:id="@+id/txtCodigoPostal"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                    android:background="@drawable/campos_circulares">
                    <EditText
                        android:id="@+id/txtContrasena"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...
                        android:textColor="@android:color/black" />
                    <ImageButton
                        android:id="@+id/btnToggleContrasena"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
...

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutConfirmarContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                    android:background="@drawable/campos_circulares">
                    <EditText
                        android:id="@+id/txtConfirmarContrasena"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
...
                        android:textColor="@android:color/black" />
                    <ImageButton
                        android:id="@+id/btnToggleConfirmarContrasena"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
...

                <LinearLayout
                    android:id="@+id/btnEliminarCuenta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <LinearLayout
                    android:id="@+id/btnGuardarCambios"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Guardar"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"/>
...
